# arb_bot

./: .gitignore  README.md  currencies.json  pyproject.toml
docs/: main.puml
sanyokTests/: main.py
src/: mapper_data.pkl
src/app/: __main__.py  config.py  logger.py  resilient_runner.py
src/core/: __init__.py
src/core/interfaces/: ExFactory.py  Exchange.py  IBalanceObserver.py  ICourier.py  IExchange.py  IPriceObserver.py  ITrader.py  __init__.py
src/core/interfaces/Dto/: Asset.py  CoinList.py  Trade.py  Transfer.py  Wait.py  __init__.py  fetch_deposit_address.py
src/core/models/: Coin.py  Coins.py  Commission.py  Deal.py  Exchange.py  ExchangeBase.py  __init__.py  types.py
src/core/protocols/: AnalistSubscriber.py  BalanceSubscriber.py  PriceSubscriber.py  __init__.py
src/core/services/: Mapper.py
src/infrastructure/: Analyst.py  CCXT2.py  CEX.py  CcxtExchange.py  CcxtExchangeModel.py  Connection.py  ExFactory.py  Guide.py  Manager.py  TradingExchange.py  TransferExchange.py
src/infrastructure/ErrorHandlerServices/: Connection.py  ConnectionErrorHandler.py
src/infrastructure/Exchenges/: CcxtExchangeModel.py  binance.py  bitget.py  htx.py  kucoin.py  okx.py
src/infrastructure/services/: BalanceExchange.py  BalanceObserver.py  Courier.py  PriceExchange.py  PriceObserver.py  Trader.py  TradingExchange.py  TransferExchange.py
src/tests/: 5.py  6.py  ExchangefakeTest.py  __main__.py  resilient_runner (2).py  test (3).py  test.py  test4.py
temp/: Port.py  Transfer.py
tests/: ExchangefakeTest.py  test (2).py  test_Analyst.py
(+12 files in other folders)
